Corrections : erreur gererConso, boutons, $Prenom, mon_compte.php, Bienvenue aligné

--- a/WEB/common/style/main.css
+++ b/WEB/common/style/main.css
@@ -85,6 +85,12 @@ input:not([type="radio"]), select {
   box-sizing: border-box; /* Permet de prendre en compte la bordure dans la largeur de l'élément */
 }
 
+span > input[type="radio"] {
+  margin-left: 1em;
+  margin-right: 0.1em;
+  transform: translateY(0.1em);
+}
+
 button {
   width: 100%; /* Remplit toute la largeur de la colonne */
 }
